tests/pact/bad/bad-cap-import-use.repl
(begin-tx)
(module m A

  (defcap A () true)

)
(commit-tx)

(module n B

  (use m)

  (defcap B () A)
)
